--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.madpractical4_21012022022">
+    package="com.example.madpractical4_21012022020">
 
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
     <application
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.MADPractical4_21012022022"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.madpractical4_21012022020.MainActivity"
             android:label="MAD Intent Practical"
             android:exported="true">
             <intent-filter>
